# TP-algoritmos1

./: .gitignore  CMakeLists.txt  README.md  auxiliares.cpp  auxiliares.h  coverage.info  definiciones.h  dibujar.py  ejemplos.h  grilla.csv  main.cpp  recorridos.csv  solucion.cpp  solucion.h
cobertura/: index-sort-f.html  index-sort-l.html  index.html
cobertura/transporteUrbano/: auxiliares.cpp.func-sort-c.html  auxiliares.cpp.func.html  auxiliares.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html  solucion.cpp.func-sort-c.html  solucion.cpp.func.html  solucion.cpp.gcov.html
cobertura/transporteUrbano/tests/: aPalabraTEST.cpp.func-sort-c.html  aPalabraTEST.cpp.func.html  aPalabraTEST.cpp.gcov.html  cantidadDeSaltosTEST.cpp.func-sort-c.html  cantidadDeSaltosTEST.cpp.func.html  cantidadDeSaltosTEST.cpp.gcov.html  completarHuecosTEST.cpp.func-sort-c.html  completarHuecosTEST.cpp.func.html  completarHuecosTEST.cpp.gcov.html  construirGrillaTEST.cpp.func-sort-c.html  construirGrillaTEST.cpp.func.html  construirGrillaTEST.cpp.gcov.html  distanciaAuxTEST.cpp.func-sort-c.html  distanciaAuxTEST.cpp.func.html  distanciaAuxTEST.cpp.gcov.html  distanciaTotalTEST.cpp.func-sort-c.html  distanciaTotalTEST.cpp.func.html  distanciaTotalTEST.cpp.gcov.html  excesoDeVelocidadTEST.cpp.func-sort-c.html  excesoDeVelocidadTEST.cpp.func.html  excesoDeVelocidadTEST.cpp.gcov.html  flotaTEST.cpp.func-sort-c.html  flotaTEST.cpp.func.html  flotaTEST.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  recorridoNoCubiertoTEST.cpp.func-sort-c.html  recorridoNoCubiertoTEST.cpp.func.html  recorridoNoCubiertoTEST.cpp.gcov.html  tiempoTotalTEST.cpp.func-sort-c.html  tiempoTotalTEST.cpp.func.html  tiempoTotalTEST.cpp.gcov.html
labo07/: coverage.info
labo07/cobertura/: index-sort-f.html  index-sort-l.html  index.html
labo07/cobertura/lib/gtest/: gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
labo07/cobertura/src/ej1/: esPrimo.cpp.func-sort-c.html  esPrimo.cpp.func.html  esPrimo.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
labo07/cobertura/src/ej2/: index-sort-f.html  index-sort-l.html  index.html  llenarTaxis.cpp.func-sort-c.html  llenarTaxis.cpp.func.html  llenarTaxis.cpp.gcov.html  puntaje.cpp.func-sort-c.html  puntaje.cpp.func.html  puntaje.cpp.gcov.html
labo07/cobertura/src/ej3/: baldosasDelPiso.cpp.func-sort-c.html  baldosasDelPiso.cpp.func.html  baldosasDelPiso.cpp.gcov.html  contandoDragones.cpp.func-sort-c.html  index.html  (+7 more)
labo07/cobertura/test/: correrTests.cpp.func-sort-c.html  correrTests.cpp.func.html  correrTests.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
labo07/ejemplo/: CMakeLists.txt  run.cpp
labo07/ejemplo/src/: runEj.cpp  runEj.h
labo07/ejemplo/src/ej/: miEjemplo.cpp  miEjemplo.h
labo07/ejemplo/test/: runTEST.cpp  runTEST.h
labo07/ejemplo/test/ej/: ejTEST.cpp
labo07/taller/: CMakeLists.txt
labo07/taller/src/ej2/: llenarTaxis.cpp
labo07/taller/src/ej3/: sandia.cpp
labo07/taller/test/ej1/: esPrimoTEST.cpp
labo07/taller/test/ej2/: llenarTaxisTEST.cpp  puntajeTEST.cpp
labo07/taller/test/ej3/: baldosasDelPisoTEST.cpp  contandoDragonesTEST.cpp  sandiaTEST.cpp
labo8/: main.cpp
lib/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: aPalabraTEST.cpp  cantidadDeSaltosTEST.cpp  completarHuecosTEST.cpp  construirGrillaTEST.cpp  distanciaAuxTEST.cpp  distanciaTotalTEST.cpp  excesoDeVelocidadTEST.cpp  flotaTEST.cpp  recorridoNoCubiertoTEST.cpp  tiempoTotalTEST.cpp
(+139 files in other folders)
